2010-11-03  Zhenyao Mo  <zmo@google.com>

Reviewed by Kenneth Russell.

        renderbufferStorage(DEPTH_STENCIL) shouldn't generate an error
        https://bugs.webkit.org/show_bug.cgi?id=48891

        * html/canvas/WebGLFramebuffer.cpp:
        (WebCore::WebGLFramebuffer::isIncomplete): Considering the case where DEPTH_STENCIL is not supported.
        * html/canvas/WebGLRenderbuffer.cpp:
        (WebCore::WebGLRenderbuffer::WebGLRenderbuffer): Init added members.
        * html/canvas/WebGLRenderbuffer.h: Add members and accessor functions.
        (WebCore::WebGLRenderbuffer::setInternalFormat):
        (WebCore::WebGLRenderbuffer::setSize):
        (WebCore::WebGLRenderbuffer::getWidth):
        (WebCore::WebGLRenderbuffer::getHeight):
        (WebCore::WebGLRenderbuffer::setIsValid):
        (WebCore::WebGLRenderbuffer::isValid):
        * html/canvas/WebGLRenderingContext.cpp:
        (WebCore::WebGLRenderingContext::initializeNewContext): Check if packed_depth_stencil extension exists.
        (WebCore::WebGLRenderingContext::getRenderbufferParameter): Simulate the case for DEPTH_STENCIL where packed_depth_stencil is not supported.
        (WebCore::WebGLRenderingContext::renderbufferStorage): Bypass the call if packed_depth_stencil is not supported.
        * html/canvas/WebGLRenderingContext.h:
2010-11-03  Zhenyao Mo  <zmo@google.com>

        Reviewed by Kenneth Russell.

        renderbufferStorage(DEPTH_STENCIL) shouldn't generate an error
        https://bugs.webkit.org/show_bug.cgi?id=48891

        * fast/canvas/webgl/framebuffer-object-attachment-expected.txt:
        * fast/canvas/webgl/framebuffer-object-attachment.html: Add the test cases for DEPTH_STENCIL renderbuffer.


Canonical link: https://commits.webkit.org/61856@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71367 268f45cc-cd09-0410-ab3c-d52691b4dbfc