WebCore/html/canvas/WebGLRenderbuffer.cpp
@@ -42,6 +42,9 @@ WebGLRenderbuffer::WebGLRenderbuffer(WebGLRenderingContext* ctx)
     : WebGLObject(ctx)
     , m_internalFormat(GraphicsContext3D::RGBA4)
     , m_initialized(false)
+    , m_width(0)
+    , m_height(0)
+    , m_isValid(true)
 {
     setObject(context()->graphicsContext3D()->createRenderbuffer());
 }
